@@ -1,6 +1,6 @@
 #!/bin/sh
 topdir=`pwd`
-for x in . src
+for x in . mspack src
 do
   cd $x
   chmod -R a+rwx `svn pg svn:ignore .` 2>/dev/null
