@@ -8,6 +8,7 @@ AC_CONFIG_HEADER([config.h])
 
 # Checks for programs.
 AC_PROG_CC
+AM_PROG_AR
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_EXEEXT
