@@ -1,6 +1,2 @@
 #!/bin/sh
-./cleanup.sh
-autoreconf -i -W all
-./configure
-make
-make distcheck
+./cleanup.sh && autoreconf -i -W all && ./configure && make && make distcheck 
